<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">XMPP Planning Poker</string>
    <string name="server">Server:</string>
    <string name="userName">Username:</string>
    <string name="password">Password:</string>
    <string name="exit">Exit</string>
    <string name="login">Login</string>
    <string name="exitAreYouSure">"Are you sure you want to exit?"</string>
    <string name="poker">Poker</string>
    <string name="optionInviteToPlan">Invite Friends</string>
    <string name="port">Port</string>
    <string name="sendInviteBtn">Send out invite to start planning</string>
    <string name="orWaitForInvite">Or wait for an invite to be sent to you...</string>
    <string name="gotInvite">%1$s invites you to a game of planning poker.\n Other invited users: \n%2$s</string>
    <string name="userAccepted">%1$s accepted the invitation.</string>
    <string name="userDeclined">%1$s declined the invitation.</string>
    <string name="invite">Invite</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="waitingForPlayers">Waiting for others to respond...</string>
    <string name="newRound">New Round</string>
</resources>
