<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
        >
    <TextView
            android:id="@+id/serverLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            />
    <EditText
            android:id="@+id/portEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/serverLabel"
            android:inputType="number"
            android:text=""
            />
    <EditText
            android:id="@+id/serverEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/serverLabel"
            android:layout_toLeftOf="@id/portEdit"
            android:text="talk.google.com"
            />
    <TextView
            android:id="@+id/portLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/serverLabel"
            android:layout_alignLeft="@id/portEdit"
            />
    <TextView
            android:id="@+id/userLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            android:layout_below="@id/serverEdit"
            android:layout_alignParentLeft="true"
            />
    <EditText
            android:id="@+id/userEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/userLabel"
            android:text="somebody@gmail.com"
            />
    <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_below="@id/userEdit"
            android:layout_alignParentLeft="true"
            />
    <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/passwordLabel"
            android:text="secret"
            android:inputType="textPassword"
            />
    <Button
            android:id="@+id/exitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:layout_below="@id/passwordEdit"
            android:layout_alignParentRight="true"
            />
    <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_below="@id/passwordEdit"
            android:layout_toLeftOf="@id/exitBtn"
            />
</RelativeLayout>

